--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 fastapi = "^0.72.0"
 aioredis = "^2.0.1"
 uvicorn = "^0.17.0"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 
